--- a/bulb/index.html
+++ b/bulb/index.html
@@ -30,7 +30,7 @@
 
     <div id="rainbow" class="d-flex">
       <div id="c1" class="rounded-circle text-center mx-2" style="width: 30px; height: 30px; border: 1px solid #000; background: pink;">c1</div>
-      <div id="c2" class="rounded-circle text-center mx-2" style="width: 30px; height: 30px; border: 1px solid #000;">c2</div>
+      <div id="c2" cla6ss="rounded-circle text-center mx-2" style="width: 30px; height: 30px; border: 1px solid #000;">c2</div>
       <div id="c3" class="rounded-circle text-center mx-2" style="width: 30px; height: 30px; border: 1px solid #000;">c3</div>
       <div id="c4" class="rounded-circle text-center mx-2" style="width: 30px; height: 30px; border: 1px solid #000;">c4</div>
       <div id="c5" class="rounded-circle text-center mx-2" style="width: 30px; height: 30px; border: 1px solid #000;">c5</div>
