--- a/EventsJS/index.html
+++ b/EventsJS/index.html
@@ -41,7 +41,7 @@
     <button onclick="SB_control2()" id="sbbutton">ON</button>
 
     <div
-    id="satrangi"
+      id="satrangi"
       class="rounded-circle text-center"
       style="border: 1px solid black; width: 200px; height: 200px"
     >
@@ -56,7 +56,7 @@
           width: 30px;
           height: 30px;
           border: 1px solid #000;
-          background: pink;
+          background-color: pink;
         "
       >
         c1
@@ -67,7 +67,8 @@
         style="
           width: 30px;
           height: 30px;
-          border: 1px solid #000;background-color: red;
+          border: 1px solid #000;
+          background-color: red;
         "
       >
         c2
@@ -78,7 +79,8 @@
         style="
           width: 30px;
           height: 30px;
-          border: 1px solid #000000;background-color: green;
+          border: 1px solid #000000;
+          background-color: green;
         "
       >
         c3
@@ -89,7 +91,8 @@
         style="
           width: 30px;
           height: 30px;
-          border: 1px solid #000;background-color: blue;
+          border: 1px solid #000;
+          background-color: blue;
         "
       >
         c4
@@ -100,7 +103,8 @@
         style="
           width: 30px;
           height: 30px;
-          border: 1px solid #000;background-color: violet;
+          border: 1px solid #000;
+          background-color: violet;
         "
       >
         c5
@@ -111,7 +115,8 @@
         style="
           width: 30px;
           height: 30px;
-          border: 1px solid #000;background-color: yellow;
+          border: 1px solid #000;
+          background-color: yellow;
         "
       >
         c6
@@ -122,7 +127,8 @@
         style="
           width: 30px;
           height: 30px;
-          border: 1px solid #000;background-color: gray;
+          border: 1px solid #000;
+          background-color: gray;
         "
       >
         c7
@@ -134,6 +140,7 @@
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
+
     <script src="script.js"></script>
   </body>
 </html>
