--- a/SundayTest/Courses.html
+++ b/SundayTest/Courses.html
@@ -20,33 +20,41 @@
     <div
       class="navbar fixed-top bg-primary fw-bold fs-3 d-flex justify-content-between text-center px-5"
     >
-
-    <div>
-        <img src="https://learn.ricr.in/pluginfile.php/1/core_admin/logocompact/300x300/1718633714/apple-icon-precomposed.png" alt="" width="70px">
-    </div>
-      <div class="d-flex justify-content-between gap-5">
-        <a href="index.html" class="text-dark" style="text-decoration: none;">Home</a>
-        <a href="Courses.html" class="text-dark" style="text-decoration: none;">Course</a>
-        <div>About Us</div>
-        <a href="contact.html" class="text-dark" style="text-decoration: none;">Contact</a>
-      </div>
-    </div>
-
-    <main style="margin-top: 100px" class="mx-5">
       <div>
-        <h1 class="display-1 fw-bold">Learn Coding with Us</h1>
-        <p class="fw-bold fs-5 w-50">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam
-          quibusdam porro minus doloribus impedit, suscipit sed consequatur
-          atque! Quibusdam quasi, fugiat possimus consectetur adipisci fugit
-          perspiciatis eveniet cum iure itaque provident vitae repellat
-          doloribus accusantium laboriosam dignissimos unde minima iusto?
-        </p>
+        <img
+          src="https://learn.ricr.in/pluginfile.php/1/core_admin/logocompact/300x300/1718633714/apple-icon-precomposed.png"
+          alt=""
+          width="70px"
+        />
       </div>
-    </main>
+      <div class="d-flex justify-content-between gap-5">
+        <a href="index.html" class="text-dark" style="text-decoration: none"
+          >Home</a
+        >
+        <a href="Courses.html" class="text-dark" style="text-decoration: none"
+          >Course</a
+        >
+        <div>About Us</div>
+        <a href="contact.html" class="text-dark" style="text-decoration: none"
+          >Contact</a
+        >
+      </div>
+    </div>
+    <section id="course-section" style="margin-top: 100px; margin-left: 50px">
+      <div class="d-flex justify-content-center fw-bold my-5">
+        <h1 class="border-1 rounded-4">Our Courses</h1>
+      </div>
 
-    <div class="d-flex justify-content-center" style="margin-top: 200px">
-      <a href="Courses.html" class="btn btn-primary">Get Started</a>
+      <div class="container" id="coursesDiv"></div>
+    </section>
+
+    <div class="d-flex justify-content-center mt-5">
+      <p class="w-75 text-center fs-4">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ex
+        ullam illo aperiam nihil optio fugit mollitia officia deleniti et nam
+        dicta cum, atque maiores consequuntur doloremque possimus asperiores
+        repellendus?
+      </p>
     </div>
 
     <script
