--- a/SundayTest/contact.html
+++ b/SundayTest/contact.html
@@ -43,12 +43,12 @@
     <div
       class="bg-primary rounded-4"
       id="contact"
-      style="margin-top: 150px; height: 300px"
+      style="margin-top: 150px; height: 400px"
     >
       <div class="form-control bg-primary">
         <label for="name" class="fs-4">Name: </label>
         <input
-          class="w-50 rounded-5"
+          class="w-50 rounded-5 form-control"
           style="height: 50px"
           type="text"
           name="name"
@@ -60,7 +60,7 @@
       <div class="form-control bg-primary">
         <label for="email" class="fs-4">Email: </label>
         <input
-          class="w-50 rounded-5"
+          class="w-50 rounded-5 form-control"
           style="height: 50px"
           type="text"
           name="college"
@@ -69,10 +69,11 @@
         />
       </div>
 
+      <label for="message" class="fs-4">Message: </label>
       <textarea
         name="message"
         id="message"
-        class="rounded-5"
+        class="rounded-5 form-control"
         placeholder="Enter your message Here"
       ></textarea>
     </div>
@@ -85,6 +86,13 @@
       >
         Submit
       </button>
+    </div>
+
+    <div class="d-flex justify-content-center text-center mt-5">
+      <p class=" text-center fs-4">
+        You Can contact us using mail and can visit us on minal residency
+        ayodhya baypass bhopal
+      </p>
     </div>
 
     <script
