--- a/SundayTest/index.html
+++ b/SundayTest/index.html
@@ -32,10 +32,10 @@
       </div>
     </div>
 
-    <main style="margin-top: 100px" class="mx-5">
+    <main style="margin-top: 150px" class="mx-5 d-flex">
       <div>
         <h1 class="display-1 fw-bold">Learn Coding with Us</h1>
-        <p class="fw-bold fs-5 w-50">
+        <p class="fw-bold fs-5 w-50 opacity-75">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam
           quibusdam porro minus doloribus impedit, suscipit sed consequatur
           atque! Quibusdam quasi, fugiat possimus consectetur adipisci fugit
@@ -43,10 +43,13 @@
           doloribus accusantium laboriosam dignissimos unde minima iusto?
         </p>
       </div>
+      <div>
+        <img src="https://www.rasmussen.edu/images/rasmussenlibraries/blogs/school-of-technology/2020/learn-to-code.jpg" alt="" style="border-radius: 20px;">
+      </div>
     </main>
 
     <div class="d-flex justify-content-center" style="margin-top: 200px">
-      <a href="Courses.html" class="btn btn-primary">Get Started</a>
+      <a href="Courses.html" class="btn btn-primary text-center align-content-center fw-bold" style="width: 200px; height: 60px;">Get Started</a>
     </div>
 
     <script
