last and final test task

--- a/SundayTest/registration.html
+++ b/SundayTest/registration.html
@@ -41,8 +41,8 @@
       </div>
     </div>
 
-    <div class="form-control" style="margin-top: 100px; margin-left: 50px">
-      <div class="form-control d-inline-block">
+    <div class="form-control bg-primary mb-5" style="margin-top: 100px; margin-left: 700px; width: 600px;">
+      <div class="form-control d-inline-block bg-transparent">
         <label for="name" class="fs-4">Name: </label>
         <input
           class="w-50 rounded-2"
@@ -54,7 +54,7 @@
         />
       </div>
 
-      <div class="form-control d-inline-block">
+      <div class="form-control d-inline-block bg-transparent">
         <label for="college" class="fs-4">College: </label>
         <input
           class="w-50 rounded-2"
@@ -66,7 +66,7 @@
         />
       </div>
 
-      <div class="form-control">
+      <div class="form-control bg-transparent">
         <label for="branch" class="fs-4">Branch: </label>
         <input
           class="w-50 rounded-2"
@@ -78,7 +78,7 @@
         />
       </div>
 
-      <div class="form-control">
+      <div class="form-control bg-transparent">
         <label for="semester" class="fs-4">Semester: </label> <br />
         <input
           class="w-50 rounded-2"
@@ -90,7 +90,7 @@
         />
       </div>
 
-      <div class="form-control">
+      <div class="form-control bg-transparent">
         <label for="number" class="fs-4">Phone Number:</label> <br />
         <input
           class="w-50 rounded-2"
@@ -102,7 +102,7 @@
         />
       </div>
 
-      <div class="form-control">
+      <div class="form-control bg-transparent">
         <label for="email" class="fs-4">Email:</label> <br />
         <input
           class="w-50 rounded-2"
@@ -114,13 +114,13 @@
         />
       </div>
 
-      <div class="form-control">
+      <div class="form-control bg-transparent">
         <label for="gender" class="fs-4">Gender:</label> <br />
         <input type="radio" name="gender" id="male" /><span>Male</span>
         <input type="radio" name="gender" id="female" /><span>Female</span>
       </div>
 
-      <div class="form-control">
+      <div class="form-control bg-transparent">
         <label for="course" class="fs-4">Course Name:</label> <br />
         <input
           class="w-50 rounded-2"
