state task complete

--- a/SundayTest/registration.html
+++ b/SundayTest/registration.html
@@ -46,7 +46,7 @@
         <label for="name" class="fs-4">Name: </label>
         <input
           class="w-50 rounded-2"
-          style="height: 50px"
+          style="height: 50px; background-color: lightblue;"
           type="text"
           name="name"
           id="name"
@@ -58,7 +58,7 @@
         <label for="college" class="fs-4">College: </label>
         <input
           class="w-50 rounded-2"
-          style="height: 50px"
+          style="height: 50px; background-color: lightblue;"
           type="text"
           name="college"
           id="college"
@@ -70,7 +70,7 @@
         <label for="branch" class="fs-4">Branch: </label>
         <input
           class="w-50 rounded-2"
-          style="height: 50px"
+          style="height: 50px; background-color: lightblue;"
           type="text"
           name="branch"
           id="branch"
@@ -82,7 +82,7 @@
         <label for="semester" class="fs-4">Semester: </label> <br />
         <input
           class="w-50 rounded-2"
-          style="height: 50px"
+          style="height: 50px; background-color: lightblue;"
           type="number"
           name="semester"
           id="semester"
@@ -94,7 +94,7 @@
         <label for="number" class="fs-4">Phone Number:</label> <br />
         <input
           class="w-50 rounded-2"
-          style="height: 50px"
+          style="height: 50px; background-color: lightblue;"
           type="number"
           name="number"
           id="number"
@@ -106,7 +106,7 @@
         <label for="email" class="fs-4">Email:</label> <br />
         <input
           class="w-50 rounded-2"
-          style="height: 50px"
+          style="height: 50px; background-color: lightblue;"
           type="email"
           name="email"
           id="email"
@@ -124,7 +124,7 @@
         <label for="course" class="fs-4">Course Name:</label> <br />
         <input
           class="w-50 rounded-2"
-          style="height: 50px"
+          style="height: 50px; background-color: lightblue;"
           type="text"
           name="course"
           id="course"
