--- a/AgeCalculatorTask/index.html
+++ b/AgeCalculatorTask/index.html
@@ -32,7 +32,7 @@
         <div class="text-center my-5 ">
             <button onclick="calculate()" class="btn btn-primary fw-bold fs-3 shadow" style="width: 200px; height: 60px;">Calculate</button>
         </div>
-        <div class="text-center fw-bold fs-1 text-success mb-5">
+        <div id="result" class="text-center fw-bold fs-1 text-success mb-5">
             
 
         </div>
