--- a/AgeCalculatorTask/index.html
+++ b/AgeCalculatorTask/index.html
@@ -30,10 +30,10 @@
             <input type="date" name="current" id="current" class="fs-3 mb-5 form-control w-50" style="margin: 0px auto;">
         </div>
         <div class="text-center my-5 ">
-            <button onclick="calculate()" class="btn btn-primary fw-bold fs-3 shadow" style="width: 200px; height: 60px;">Calculate</button>
+            <button onclick="calculate()" class="btn btn-primary fw-bold fs-3 shadow rounded-5" style="width: 200px; height: 60px; border: 3px solid #f70404;">Calculate</button>
         </div>
         <div id="result" class="text-center fw-bold fs-1 text-success mb-5">
-            
+            Wants to know you age?  
 
         </div>
     </div>
