--- a/TipCalculator/index.html
+++ b/TipCalculator/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>TIP CALCULATOR</title>
   </head>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -79,13 +79,19 @@
             />
           </div>
 
-          <div class="text-center mt-5">
-            <button onclick="calculate()" class="btn btn-primary w-50 shadow fw-bold fs-4">
+          <div class="text-center mt-5 mb-5">
+            <button
+              onclick="calculate()"
+              class="btn btn-primary w-50 shadow fw-bold fs-4"
+            >
               Calculate
             </button>
           </div>
 
-          <div class="text-center fs-2 fw-bold my-5 text-success" id="result"></div>
+          <div
+            class="text-center fs-2 fw-bold my-5 text-success"
+            id="result"
+          ></div>
         </div>
       </div>
     </div>
