--- a/Guessthenumber/index.html
+++ b/Guessthenumber/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guess The Number</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -15,33 +15,56 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-
-
-    <div class="text-center w-75 container py-5 my-5" style="background-color: blueviolet;" >
-        <div class="container w-50 rounded-5 my-5 py-5" style="background-color: bisque;">
-            <div class="fw-bold fs-5 my-5">
-                <h1 class="display-3 fw-bold my-5 text-secondary">Guess The Number</h1>
-                <p>We Have Selected A Random Number Between 1-10. <br> See If You Can Guess It. </p>
-            </div>
-            <div class="container my-5">
-                <label for="guess" class="fs-3 fw-bold my-3">Guess The Number Below:</label> <br>
-                <input type="number" placeholder="Enter Your Guess" name="guess" id="guess" class="form-control w-50 container">
-            </div>
-            <div>
-                <button id="btn" class="btn btn-primary shadow w-25 fw-bold fs-4" onclick="submit()">Submit</button>
-            </div>
-            <div id="result" class="container text-center fs-2 fw-bold text-success my-5">
-                Submit To See If You Guess It Right!
-
-            </div>
- 
+  </head>
+  <body>
+    <div
+      class="text-center w-75 container py-5 my-5"
+      style="background-color: blueviolet"
+    >
+      <div
+        class="container w-50 rounded-5 my-5 py-5"
+        style="background-color: bisque"
+      >
+        <div class="fw-bold fs-5 my-5">
+          <h1 class="display-3 fw-bold my-5 text-secondary">
+            Guess The Number
+          </h1>
+          <p>
+            We Have Selected A Random Number Between 1-10. <br />
+            See If You Can Guess It.
+          </p>
         </div>
-
+        <div class="container my-5">
+          <label for="guess" class="fs-3 fw-bold my-3"
+            >Guess The Number Below:</label
+          >
+          <br />
+          <input
+            type="number"
+            placeholder="Enter Your Guess"
+            name="guess"
+            id="guess"
+            class="form-control w-50 container"
+          />
+        </div>
+        <div>
+          <button
+            id="btn"
+            class="btn btn-primary shadow w-25 fw-bold fs-4"
+            onclick="submit()"
+          >
+            Submit
+          </button>
+        </div>
+        <div
+          id="result"
+          class="container text-center fs-2 fw-bold text-success my-5"
+        >
+          Submit To See If You Guess It Right!
+        </div>
+        <div id="icon" style="font-size: 40px"></div>
+      </div>
     </div>
-
-
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
@@ -49,5 +72,5 @@
       crossorigin="anonymous"
     ></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
