--- a/RockPaperSecior/index.html
+++ b/RockPaperSecior/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Secissor</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -15,31 +15,68 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-
-    <div class="container py-5 text-center" style="background-color: rgb(179, 105, 249);">
-        <div class="container d-flex justify-content-between w-75 my-5">
-            <div class="" id="user">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ71Bm7oOk6t3kVeT8TLPMhqwe1fTMQ-Eropw&s" id="userimg" alt="" width="200px" class="rounded-5"> <br> <span class="fw-bold fs-3">You</span>
+  </head>
+  <body>
+    <div
+      class="container py-5 text-center"
+      style="background-color: rgb(179, 105, 249)"
+    >
+      <div class="container d-flex justify-content-between w-75 my-5">
+        <div class="" id="user">
+          <img
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ71Bm7oOk6t3kVeT8TLPMhqwe1fTMQ-Eropw&s"
+            id="userimg"
+            alt=""
+            width="200px"
+            class="rounded-5"
+          />
+          <br />
+          <span class="fw-bold fs-3">You</span> <br />
+          <span id="userscore" class="fw-bold fs-3">0</span>
         </div>
         <div class="" id="ai">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ71Bm7oOk6t3kVeT8TLPMhqwe1fTMQ-Eropw&s" id="aiimg" alt="" width="200px" class="rounded-5"> <br> <span class="fw-bold fs-3">Computer</span>
+          <img
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ71Bm7oOk6t3kVeT8TLPMhqwe1fTMQ-Eropw&s"
+            id="aiimg"
+            alt=""
+            width="200px"
+            class="rounded-5"
+          />
+          <br />
+          <span class="fw-bold fs-3">Computer</span> <br />
+          <span id="aiscore" class="fw-bold fs-3">0</span>
         </div>
-        </div>
+      </div>
 
-        <div class="my-5 fw-bold fs-3">
-            <label for="rpc">Choose Your Sign</label> <br>
-            <input type="radio" name="rpc" id="Rock" onclick="rock()" class="mx-2"><span>Rock</span>
-            <input type="radio" name="rpc" id="Paper" onclick="paper()"  class="mx-2"><span>Paper</span>
-            <input type="radio" name="rpc" id="Secissor" onclick="secissor()"  class="mx-2"><span>Secissor</span>
-        </div>
+      <div class="my-5 fw-bold fs-3">
+        <label for="rpc">Choose Your Sign</label> <br />
+        <input
+          type="radio"
+          name="rpc"
+          id="Rock"
+          onclick="rock()"
+          class="mx-2"
+        /><span>Rock</span>
+        <input
+          type="radio"
+          name="rpc"
+          id="Paper"
+          onclick="paper()"
+          class="mx-2"
+        /><span>Paper</span>
+        <input
+          type="radio"
+          name="rpc"
+          id="Secissor"
+          onclick="secissor()"
+          class="mx-2"
+        /><span>Secissor</span>
+      </div>
 
-        <div id="result" class="text-center fs-2 text-success fw-bold my-5">
-            Lets See Who Wins!
-        </div>
+      <div id="result" class="text-center fs-2 text-danger fw-bold my-5">
+        Lets See Who Wins!
+      </div>
     </div>
-
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
@@ -47,5 +84,5 @@
       crossorigin="anonymous"
     ></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
