--- a/RockPaperSecior/index.html
+++ b/RockPaperSecior/index.html
@@ -16,12 +16,12 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body style="background-color: rgb(9, 9, 83);">
     <div
       class="container py-5 text-center rounded-3 my-5 shadow"
       style="background-color: rgb(179, 105, 249);  border: 1px solid #000;"
     >
-    <h1 class="fw-bold display-4 mb-5 shadow ">Rock Paper Secissor Game</h1>
+    <h1 class="fw-bold display-4 mb-5 shadow rounded-3" style="border: 2px solid red;">Rock Paper Secissor Game</h1>
       <div class="container d-flex justify-content-between w-75 my-5">
         <div class="" id="user">
           <img
@@ -80,7 +80,7 @@
         /><span>Secissor</span>
       </div>
 
-      <div id="result" class="text-center fs-2 text-danger fw-bold my-5">
+      <div id="result" class="text-center fs-2 text-danger fw-bold my-5 align-content-center" style="border-top: 2px solid rgb(7, 7, 7);">
         Lets See Who Wins!
       </div>
     </div>
