--- a/registraionjs/index.html
+++ b/registraionjs/index.html
@@ -162,9 +162,8 @@
                 <option value="">---Select Qualification---</option>
                 <option value="Data Science">Data Science</option>
                 <option value="DSA">DSA</option>
-                <option value="Third Year">Third Year</option>
-                <option value="Fourth Year">Fourth Year</option>
-                <option value="Passed Out">Passed Out</option>
+                <option value="Java">Java</option>
+                <option value="Python">Python</option>
                 <option value="Other">Other</option>
               </select>
             </div>
