--- a/registraionjs/index.html
+++ b/registraionjs/index.html
@@ -51,9 +51,13 @@
                 id="fullName"
                 class="form-control"
                 required
-              /> 
+              />
             </div>
-            <span class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error" id="nameError">required</span>
+            <span
+              class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error"
+              id="nameError"
+              >required</span
+            >
 
             <div class="d-flex align-items-center">
               <label for="email" class="form-label w-25"
@@ -67,7 +71,11 @@
                 required
               />
             </div>
-            <span class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error" id="emailError">required</span>
+            <span
+              class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error"
+              id="emailError"
+              >required</span
+            >
 
             <div class="d-flex align-items-center">
               <label for="contact" class="form-label w-25"
@@ -81,8 +89,11 @@
                 required
               />
             </div>
-            <span class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error" id="phoneError">required</span>
-
+            <span
+              class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error"
+              id="phoneError"
+              >required</span
+            >
 
             <div class="d-flex align-items-center">
               <label for="dob" class="form-label w-25"
@@ -96,7 +107,11 @@
                 required
               />
             </div>
-            <span class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error" id="dobError">required</span>
+            <span
+              class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error"
+              id="dobError"
+              >required</span
+            >
           </div>
         </div>
 
@@ -127,7 +142,11 @@
                 <option value="Other">Other</option>
               </select>
             </div>
-            <span class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error" id="qlfError">required</span>
+            <span
+              class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error"
+              id="qlfError"
+              >required</span
+            >
 
             <div class="d-flex align-items-center">
               <label for="grade" class="form-label w-25"
@@ -141,7 +160,11 @@
                 required
               />
             </div>
-            <span class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error" id="grdError">required</span>
+            <span
+              class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error"
+              id="grdError"
+              >required</span
+            >
           </div>
         </div>
 
@@ -167,7 +190,11 @@
                 <option value="Other">Other</option>
               </select>
             </div>
-            <span class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error" id="crsError">required</span>
+            <span
+              class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error"
+              id="crsError"
+              >required</span
+            >
 
             <div class="d-flex align-items-center">
               <label for="batch" class="form-label w-25"
@@ -214,7 +241,11 @@
                 /><span class="ms-2 me-4">Night</span>
               </div>
             </div>
-            <span class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error" id="batchError">required</span>
+            <span
+              class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error"
+              id="batchError"
+              >required</span
+            >
 
             <div class="d-flex align-items-center">
               <label for="batch" class="form-label w-25"
@@ -261,7 +292,11 @@
                 /><span class="ms-2 me-4">6-7:30 PM</span>
               </div>
             </div>
-            <span class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error" id="timeError">required</span>
+            <span
+              class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error"
+              id="timeError"
+              >required</span
+            >
           </div>
         </div>
         <div class="border border-dark p-3 p-5 position-relative mt-4">
@@ -285,21 +320,29 @@
                 required
               />
             </div>
-            <span class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error" id="adrsError">required</span>
+            <span
+              class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error"
+              id="adrsError"
+              >required</span
+            >
 
             <div class="d-flex align-items-center">
               <label for="city" class="form-label w-25"
                 >City :<sup class="text-danger fs-5">*</sup></label
               >
               <input
-                type="email"
+                type="text"
                 name="city"
                 id="city"
                 class="form-control"
                 required
               />
             </div>
-            <span class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error" id="cityError">required</span>
+            <span
+              class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error"
+              id="cityError"
+              >required</span
+            >
 
             <div class="d-flex align-items-center">
               <label for="pinCode" class="form-label w-25"
@@ -313,7 +356,11 @@
                 required
               />
             </div>
-            <span class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error" id="pinError">required</span>
+            <span
+              class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error"
+              id="pinError"
+              >required</span
+            >
           </div>
         </div>
 
@@ -339,7 +386,11 @@
                 id="guardianName"
               />
             </div>
-            <span class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error" id="grdNameError">required</span>
+            <span
+              class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error"
+              id="grdNameError"
+              >required</span
+            >
 
             <div class="d-flex align-items-center">
               <label for="Guardianctct" class="form-label w-25"
@@ -353,7 +404,11 @@
                 required
               />
             </div>
-            <span class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error" id="grdPhoneError">required</span>
+            <span
+              class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error"
+              id="grdPhoneError"
+              >required</span
+            >
           </div>
         </div>
 
@@ -368,7 +423,7 @@
           <div class="d-grid gap-3">
             <div class="d-flex align-items-center">
               <label for="hearUs" class="form-label w-25"
-                >Hoe Did You Hear About Us :<sup class="text-danger fs-5"
+                >How Did You Hear About Us :<sup class="text-danger fs-5"
                   >*</sup
                 ></label
               >
