--- a/registraionjs/index.html
+++ b/registraionjs/index.html
@@ -322,7 +322,7 @@
             </div>
             <span
               class="d-flex justify-content-end float-end text-danger fs-6 mb-3 error"
-              id="adrsError"
+              id="addressError"
               >required</span
             >
 
@@ -422,14 +422,14 @@
 
           <div class="d-grid gap-3">
             <div class="d-flex align-items-center">
-              <label for="hearUs" class="form-label w-25"
+              <label for="hear" class="form-label w-25"
                 >How Did You Hear About Us :<sup class="text-danger fs-5"
                   >*</sup
                 ></label
               >
               <select
-                name="qualification"
-                id="qualification"
+                name="hear"
+                id="hear"
                 class="form-select"
               >
                 <option value="">
@@ -438,7 +438,6 @@
                 <option value="Friends">Friends</option>
                 <option value="Social Media">Social Media</option>
                 <option value="News Paper">News Paper</option>
-
                 <option value="Other">Other</option>
               </select>
             </div>
