--- a/registraionjs/index.html
+++ b/registraionjs/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-light">
+  <body class="bg-secondary">
     <div
       class="navbar bg-primary fs-1 d-flex justify-content-center mb-5 fw-bold text-light fixed-top text-center"
     >
@@ -32,7 +32,7 @@
         class="container bg-white border border-primary rounded shadow p-3"
         style="margin-top: 100px"
       >
-        <div class="border border-dark p-3 p-5 position-relative">
+        <div class="border border-dark p-3 p-5 position-relative rounded-5">
           <span
             class="px-2 fs-5 position-absolute bg-white text-primary"
             style="top: -15px"
@@ -115,7 +115,7 @@
           </div>
         </div>
 
-        <div class="border border-dark p-3 p-5 position-relative mt-4">
+        <div class="border border-dark p-3 p-5 position-relative mt-4 rounded-5">
           <span
             class="px-2 fs-5 position-absolute text-primary bg-white"
             style="top: -15px"
@@ -168,7 +168,7 @@
           </div>
         </div>
 
-        <div class="border border-dark p-3 p-5 position-relative mt-4">
+        <div class="border border-dark p-3 p-5 position-relative mt-4 rounded-5">
           <span
             class="px-2 fs-5 position-absolute text-primary bg-white"
             style="top: -15px"
@@ -299,7 +299,7 @@
             >
           </div>
         </div>
-        <div class="border border-dark p-3 p-5 position-relative mt-4">
+        <div class="border border-dark p-3 p-5 position-relative mt-4 rounded-5">
           <span
             class="px-2 fs-5 position-absolute bg-white text-primary"
             style="top: -15px"
@@ -364,7 +364,7 @@
           </div>
         </div>
 
-        <div class="border border-dark p-3 p-5 position-relative mt-4">
+        <div class="border border-dark p-3 p-5 position-relative mt-4 rounded-5">
           <span
             class="px-2 fs-5 position-absolute text-primary bg-white"
             style="top: -15px"
@@ -412,7 +412,7 @@
           </div>
         </div>
 
-        <div class="border border-dark p-3 p-5 position-relative mt-4">
+        <div class="border border-dark p-3 p-5 position-relative mt-4 rounded-5">
           <span
             class="px-2 fs-5 position-absolute text-primary bg-white"
             style="top: -15px"
@@ -460,12 +460,14 @@
             >
           </div>
         </div>
-        <button class="btn bg-success m-5" type="submit" onclick="submit()">
+        <div class="text-center">
+          <button class="btn bg-success m-5 text-light fs-5 fw-bold" type="submit" onclick="submit()">
           Submit
         </button>
-        <button class="btn bg-danger m-5" type="reset" onclick="reset()">
+        <button class="btn bg-danger m-5 text-light fs-5 fw-bold" type="reset" onclick="reset()">
           Reset
         </button>
+        </div>
       </div>
     </main>
 
