--- a/ElectricityBillCalculator/index.html
+++ b/ElectricityBillCalculator/index.html
@@ -31,25 +31,25 @@
 
         <div class="container w-50 px-lg-5 py-4 text-light rounded-3" style="background-color: rgb(16, 16, 93);">
             <div class="d-flex justify-content-between mt-5">
-                <label for="slab1" class="fs-5">First Slab Units:</label><span class="align-content-center fs-5 fw-bold">00</span>
-                <label for="chrg1" class="fs-5">First Slab Charges:</label><span class="align-content-center fs-5 fw-bold">00</span>
+                <label for="slab1" class="fs-5">First Slab Units:</label><span id="sl1" class="align-content-center fs-5 fw-bold">00</span>
+                <label for="chrg1" class="fs-5">First Slab Charges:</label><span  id="ch1"  class="align-content-center fs-5 fw-bold">00</span>
             </div>
             <div class="d-flex justify-content-between my-2">
-                <label for="slab2" class="fs-5">Second Slab Units:</label><span class="align-content-center fs-5 fw-bold mx-3">00</span>
-                <label for="chrg2" class="fs-5">Second Slab charges:</label><span class="align-content-center fs-5 fw-bold mx-3">00</span>
+                <label for="slab2" class="fs-5">Second Slab Units:</label><span id="sl2"  class="align-content-center fs-5 fw-bold mx-3">00</span>
+                <label for="chrg2" class="fs-5">Second Slab charges:</label><span  id="ch2"  class="align-content-center fs-5 fw-bold mx-3">00</span>
             </div>
             <div class="d-flex justify-content-between my-2">
-                <label for="slab3" class="fs-5">Third Slab Units:</label><span class="align-content-center fs-5 fw-bold mx-3">00</span>
-                <label for="chrg3" class="fs-5">Third Slab Charges:</label><span class="align-content-center fs-5 fw-bold mx-3">00</span>
+                <label for="slab3" class="fs-5">Third Slab Units:</label><span id="sl3"  class="align-content-center fs-5 fw-bold mx-3">00</span>
+                <label for="chrg3" class="fs-5">Third Slab Charges:</label><span  id="ch3"  class="align-content-center fs-5 fw-bold mx-3">00</span>
             </div>
             <div class="d-flex justify-content-between my-2">
-                <label for="slab4" class="fs-5">Fourth Slab Units:</label><span class="align-content-center fs-5 fw-bold mx-3">00</span>
-                <label for="chrg4" class="fs-5">Fourth Slab Charges:</label><span class="align-content-center fs-5 fw-bold mx-3">00</span>
+                <label for="slab4" class="fs-5">Fourth Slab Units:</label><span  id="sl4" class="align-content-center fs-5 fw-bold mx-3">00</span>
+                <label for="chrg4" class="fs-5">Fourth Slab Charges:</label><span   id="ch4" class="align-content-center fs-5 fw-bold mx-3">00</span>
             </div>
             <div class="my-5" style="forced-color-adjust: auto;">
-                <label for="total" class="fs-5">Total Charges:</label><span class="align-content-center fs-5 fw-bold mx-3">00</span> <br>
-                <label for="subcharges" class="fs-5">Surcharges:</label><span class="align-content-center fs-5 fw-bold mx-3">00</span> <br>
-                <label for="final" class="fs-5">Final Charge:</label><span class="align-content-center fs-5 fw-bold mx-3">00</span>
+                <label for="total" class="fs-5">Total Charges:</label><span id="ttl"  class="align-content-center fs-5 fw-bold mx-3">00</span> <br>
+                <label for="subcharges" class="fs-5">Surcharges:</label><span id="sur" class="align-content-center fs-5 fw-bold mx-3">00</span> <br>
+                <label for="final" class="fs-5">Final Charge:</label><span id="final"  class="align-content-center fs-5 fw-bold mx-3">00</span>
             </div>
         </div>
     </div>
