--- a/ElectricityBillCalculator/index.html
+++ b/ElectricityBillCalculator/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -15,52 +15,115 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-
-
-    <div class="container bg-primary text-light my-5 rounded-5">
+  </head>
+  <body>
+    <div class="container bg-primary text-light py-5 rounded-5">
+      <div
+        class="container w-50 px-lg-5 py-4 text-light rounded-top-5"
+        style="background-color: rgb(16, 16, 93); border: 1px solid white"
+      >
         <div class="my-5 text-center">
-            <label for="units" class="mt-3 container fw-bold  fs-3">Electricity Units:</label>
-            <input type="number" name="units" id="units" placeholder="Enter Electricity Units" class="form-control w-25 container "> <span class="fs-6 text-danger fw-bold" id="unitsError"></span>
+          <label for="units" class="mt-3 container fw-bold fs-3"
+            >Electricity Units:</label
+          >
+          <input
+            type="number"
+            name="units"
+            id="units"
+            placeholder="Enter Electricity Units"
+            class="form-control w-50 container"
+          />
+          <span class="fs-6 text-danger fw-bold" id="unitsError"></span>
         </div>
         <div class="text-center my-5">
-            <button class="btn btn-success fw-bold fs-5 me-2" onclick="calculate()">Calculate</button>
-            <button class="btn btn-danger fw-bold fs-5" type="reset" onclick="clear()">Clear</button>
+          <button
+            class="btn btn-success fw-bold fs-5 me-2"
+            onclick="calculate()"
+          >
+            Calculate
+          </button>
+          <button
+            id="rest"
+            class="btn btn-danger fw-bold fs-5"
+            type="reset"
+            onclick="clean()"
+          >
+            Clear
+          </button>
         </div>
+      </div>
 
-        <div class="container w-50 px-lg-5 py-4 text-light rounded-3" style="background-color: rgb(16, 16, 93);">
-            <div class="d-flex justify-content-between mt-5">
-                <label for="slab1" class="fs-5">First Slab Units:</label><span id="sl1" class="align-content-center fs-5 fw-bold">00</span>
-                <label for="chrg1" class="fs-5">First Slab Charges:</label><span  id="ch1"  class="align-content-center fs-5 fw-bold">00</span>
-            </div>
-            <div class="d-flex justify-content-between my-2">
-                <label for="slab2" class="fs-5">Second Slab Units:</label><span id="sl2"  class="align-content-center fs-5 fw-bold mx-3">00</span>
-                <label for="chrg2" class="fs-5">Second Slab charges:</label><span  id="ch2"  class="align-content-center fs-5 fw-bold mx-3">00</span>
-            </div>
-            <div class="d-flex justify-content-between my-2">
-                <label for="slab3" class="fs-5">Third Slab Units:</label><span id="sl3"  class="align-content-center fs-5 fw-bold mx-3">00</span>
-                <label for="chrg3" class="fs-5">Third Slab Charges:</label><span  id="ch3"  class="align-content-center fs-5 fw-bold mx-3">00</span>
-            </div>
-            <div class="d-flex justify-content-between my-2">
-                <label for="slab4" class="fs-5">Fourth Slab Units:</label><span  id="sl4" class="align-content-center fs-5 fw-bold mx-3">00</span>
-                <label for="chrg4" class="fs-5">Fourth Slab Charges:</label><span   id="ch4" class="align-content-center fs-5 fw-bold mx-3">00</span>
-            </div>
-            <div class="my-5" style="forced-color-adjust: auto;">
-                <label for="total" class="fs-5">Total Charges:</label><span id="ttl"  class="align-content-center fs-5 fw-bold mx-3">00</span> <br>
-                <label for="subcharges" class="fs-5">Surcharges:</label><span id="sur" class="align-content-center fs-5 fw-bold mx-3">00</span> <br>
-                <label for="final" class="fs-5">Final Charge:</label><span id="final"  class="align-content-center fs-5 fw-bold mx-3">00</span>
-            </div>
+      <div
+        class="container w-50 px-lg-5 py-4 text-light rounded-bottom-5 my-3"
+        style="background-color: rgb(16, 16, 93); border: 1px solid white"
+      >
+        <div class="d-flex justify-content-between mt-5">
+          <label for="slab1" class="fs-5">First Slab Units:</label
+          ><span id="sl1" class="align-content-center fs-5 fw-bold">00</span>
+          <label for="chrg1" class="fs-5">First Slab Charges:</label
+          ><span id="ch1" class="align-content-center fs-5 fw-bold"
+            >&#8377;00</span
+          >
         </div>
+        <div class="d-flex justify-content-between my-2">
+          <label for="slab2" class="fs-5">Second Slab Units:</label
+          ><span id="sl2" class="align-content-center fs-5 fw-bold mx-3"
+            >00</span
+          >
+          <label for="chrg2" class="fs-5">Second Slab charges:</label
+          ><span id="ch2" class="align-content-center fs-5 fw-bold mx-3"
+            >&#8377;00</span
+          >
+        </div>
+        <div class="d-flex justify-content-between my-2">
+          <label for="slab3" class="fs-5">Third Slab Units:</label
+          ><span id="sl3" class="align-content-center fs-5 fw-bold mx-3"
+            >00</span
+          >
+          <label for="chrg3" class="fs-5">Third Slab Charges:</label
+          ><span id="ch3" class="align-content-center fs-5 fw-bold mx-3"
+            >&#8377;00</span
+          >
+        </div>
+        <div class="d-flex justify-content-between my-2">
+          <label for="slab4" class="fs-5">Fourth Slab Units:</label
+          ><span id="sl4" class="align-content-center fs-5 fw-bold mx-3"
+            >00</span
+          >
+          <label for="chrg4" class="fs-5">Fourth Slab Charges:</label
+          ><span id="ch4" class="align-content-center fs-5 fw-bold mx-3"
+            >&#8377;00</span
+          >
+        </div>
+        <div
+          class="container text-center fw-bold rounded-4 my-4"
+          style="border: 2px solid red"
+        >
+          <div class="my-5" style="forced-color-adjust: auto">
+            <label for="total" class="fs-5">Total Charges:</label
+            ><span id="ttl" class="align-content-center fs-5 fw-bold mx-3"
+              >&#8377;00</span
+            >
+            <br />
+            <label for="subcharges" class="fs-5">Surcharges:</label
+            ><span id="sur" class="align-content-center fs-5 fw-bold mx-3"
+              >&#8377;00</span
+            >
+            <br />
+            <label for="final" class="fs-5">Final Charge:</label
+            ><span id="final" class="align-content-center fs-5 fw-bold mx-3"
+              >&#8377;00</span
+            >
+          </div>
+        </div>
+      </div>
     </div>
 
-
-
-     <script
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
