--- a/Assignments/RockpaperSecossor/index.html
+++ b/Assignments/RockpaperSecossor/index.html
@@ -81,10 +81,10 @@
       </div>
 
       <div id="result" class="text-center fs-2 text-danger fw-bold my-5 align-content-center" style="border-top: 2px solid rgb(7, 7, 7);">
-        Lets See Who Wins!
+        Lets See Who Wins You Or Me! 
       </div>
     </div>
-
+     
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
