--- a/AssignmentsAll/TravelBillCalculator/index.html
+++ b/AssignmentsAll/TravelBillCalculator/index.html
@@ -19,7 +19,7 @@
 <body>
 
 
-    <div class="container text-center my-5 py-5 rounded-top-circle w-75" style="background-color: rgb(21, 21, 81);">
+    <div class="container text-center my-3 py-5 rounded-top-circle w-50" style="background-color: rgb(21, 21, 81);">
         <div class="my-5">
             <label for="km" class="fs-4 fw-bold text-light">Enter Travelled Distance In KiloMeters:</label>
             <input type="number" class="form-control w-50 container" name="km" id="km" placeholder="Enter KiloMeters">
@@ -30,22 +30,22 @@
         </div>
     </div>
 
-    <div class="container text-center text-light my-5 py-5  w-75" style="background-color: rgb(21, 21, 81);">
+    <div class="container text-center text-light my-3 py-5 rounded-bottom-4  w-50" style="background-color: rgb(21, 21, 81);">
 
         <div class="d-flex justify-content-evenly">
             <div class="text-center">
-                <p><label for="slab1" class="fs-4 fw-bold ">First Slab Kms.  :</label><span id="sl1" class="fs-4 fw-bold "></span></p>
-                <p><label for="slab2" class="fs-4 fw-bold ">Second Slab Kms.  :</label><span id="sl2" class="fs-4 fw-bold "></span></p>
-                <p><label for="slab3" class="fs-4 fw-bold ">Third Slab Kms.  :</label><span id="sl3" class="fs-4 fw-bold "></span></p>
+                <p><label for="slab1" class="fs-4 fw-bold ">First Slab Kms.  :</label><span id="sl1" class="fs-4 fw-bold mx-4 ">00</span></p>
+                <p><label for="slab2" class="fs-4 fw-bold ">Second Slab Kms.  :</label><span id="sl2" class="fs-4 fw-bold  mx-4 ">00</span></p>
+                <p><label for="slab3" class="fs-4 fw-bold ">Third Slab Kms.  :</label><span id="sl3" class="fs-4 fw-bold mx-4  ">00</span></p>
             </div>
             <div class="text-center">
-                <p><label for="charg1" class="fs-4 fw-bold ">First Slab Charges:</label><span id="ch1" class="fs-4 fw-bold "></span></p>
-                <p><label for="charg2" class="fs-4 fw-bold ">Second Slab Charges:</label><span id="ch2" class="fs-4 fw-bold "></span></p>
-                <p><label for="charg3" class="fs-4 fw-bold ">Third Slab Charges:</label><span id="ch3" class="fs-4 fw-bold "></span></p>
+                <p><label for="charg1" class="fs-4 fw-bold ">First Slab Charges:</label><span id="ch1" class="fs-4 fw-bold mx-4  ">Rs. 00</span></p>
+                <p><label for="charg2" class="fs-4 fw-bold ">Second Slab Charges:</label><span id="ch2" class="fs-4 fw-bold  mx-4 ">Rs. 00</span></p>
+                <p><label for="charg3" class="fs-4 fw-bold ">Third Slab Charges:</label><span id="ch3" class="fs-4 fw-bold  mx-4 ">Rs. 00</span></p>
             </div>
         </div>
-        <div class="container text-light fw-bold fs-3">
-            <p><label for="ttl" class="fs-4 fw-bold ">Your Total Bill is:</label><span id="ttlcharg" class="fs-4 fw-bold mx-4"></span></p>
+        <div class="container text-light fw-bold fs-3 my-5 py-5 w-50 rounded-5" style="border: 2px solid white;">
+            <p><label for="ttl" class="fs-4 fw-bold ">Your Total Bill is:</label><span id="ttlcharg" class="fs-4 fw-bold mx-4">Rs. 00</span></p>
         </div>
 
 
